deployment_strategies/canary/canary_ing.yml
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary
  # The below annotations will help us control the traffic
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
spec:
  ingressClassName: nginx
  rules:
    - host: echo.prod.mydomain.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: canary
                port:
                  number: 80
