deployment_strategies/canary/main_ing.yml
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: production
  annotations:
spec:
  ingressClassName: nginx
  rules:
    - host: echo.prod.mydomain.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: production
                port:
                  number: 80
